--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 #formthing {
   margin: auto;
   display: block;
+  border-radius: 25px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 #titleForm {
@@ -37,6 +40,7 @@
 
 #sign-in-form {
   max-width: 500px;
+  
 }
 
 #label-inputs {
@@ -47,9 +51,15 @@
 #buttonstyle {
   background-image: linear-gradient(to right, #ff7b5c, #ff6c81);
   background-size: auto;
-  border-radius: 2px;
+  border-radius: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
 }
 
+#buttondiv{
+  margin-left: 50%;
+}
 @media only screen and (max-width: 768px) {
   .float-child {
     margin: auto;
